--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       .
     </div>
     <div id="phaser-container" class="min-w-[1024px]">
-      <video id="backgroundVideo" preload="true" autoplay loop muted style="display: block; z-index: -100; position: fixed;">
+      <video id="backgroundVideo" preload="true" autoplay loop muted style="display: none; z-index: -100; position: fixed;">
         <source src="./assets/background/main.mp4">
       </video>
       <input id="swapAmountInput" style=
